aligned and corrected the layout of info div

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-/* * {
+ * {
     outline: 3px solid blue
 }
-*/
+
 body,html {
     padding: 0;
     margin: 0;
@@ -26,6 +26,7 @@ body,html {
     list-style: none;
     font-weight: 18px;
     font-size: 18px;
+    text-align: center;
 
 }
 
@@ -85,4 +86,43 @@ body,html {
     font-family: Arial, Helvetica, sans-serif;
     border-radius: 5px;
     padding: 10px;
+}
+
+.info{
+    padding: 55px;
+    height: auto;
+}
+
+.info h2{
+    text-align: center;
+    font-family: "Roboto", sans-serif;
+    font-size: 36px;
+    font-weight: bolder;
+    padding: 10px;
+    margin: 5px auto;
+    margin-bottom: 10px;
+    max-width: 1000px;
+}
+
+.info ul{
+    list-style: none;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+    align-items: center;
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+.info ul li img {
+    width: 200px;
+    height: 200px;
+    position: relative;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+}
+
+.info ul li{
+    text-align: center;
 }
